# aiospotify.py

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  TODO.md  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt
.github/workflows/: release.yml
docs/: getting_started.md  index.md
docs/css/: extra.css
docs/javascript/: config.js
docs/reference/: albums.md  artists.md  audio.md  audiobooks.md  categories.md  chapters.md  enums.md  episodes.md  errors.md  genres.md  markets.md  oauth.md  player.md  playlists.md  recommendations.md  search.md  shared.md  shows.md  tracks.md  types.md  users.md
docs/source/: api-reference.rst  conf.py  index.rst
docs/source/api_references/: enums.rst  models.rst  oauth.rst  rest.rst
examples/: get_artist.py  requirements.txt  users_top_items.py
spotify/: __init__.py  api.py  enums.py  errors.py  internals.py  models.py  oauth.py  rest.py  types.py  types.pyi  utils.py
